--- a/android-app/app/src/main/res/layout/activity_main.xml
+++ b/android-app/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:id="@+id/main"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/background2"
+    android:gravity="center_horizontal"
+    android:padding="24dp">
+
+    <ImageView
+        android:id="@+id/fox_mascot"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="48dp"
+        android:layout_marginTop="240dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/fox_avatar" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:padding="16dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/buttonPing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ping Server" />
+            android:id="@+id/scan_button"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="#4A90E2"
+            android:text="Scan a Receipt"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/textViewResult"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rezultat"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"/>
+        <Button
+            android:id="@+id/stats_button"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:backgroundTint="#357ABD"
+            android:text="View Statistics"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
